<resources>
    <string name="app_name">FinalAssignmentNotesApp</string>
    <string name="notes_app">Notes App</string>
    <string name="new_note">New Note</string>
    <string name="view_notes">View Notes</string>
    <string name="settings">Settings</string>
    <string name="notes_app1">Notes App</string>
    <string name="created_by_kirtan_patel">Created by Kirtan Patel</string>
    <string name="created_for_android_development_course">Created for Android Development Course</string>
    <string name="_2025">© 2025</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="back1">Back</string>
    <string name="no_notes_found_create_your_first_note">No notes found. Create your first note!</string>
    <string name="enable_daily_affirmation">Enable Daily Affirmation</string>
    <string name="save_settings">Save Settings</string>
    <string name="settings1">Settings</string>
    <string name="note_title">Note Title</string>
    <string name="write_your_note_here">Write your note here...</string>
    <string name="cancel">Cancel</string>
    <string name="save_note">Save Note</string>
</resources>