<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp"/>

    <Switch
        android:id="@+id/switchDailyAffirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_daily_affirmation"/>

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:layout_marginTop="32dp"/>

</LinearLayout>